--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.28.0",
+    "@trpc/client": "^10.19.1",
+    "@trpc/next": "^10.19.1",
+    "@trpc/react-query": "^10.19.1",
+    "@trpc/server": "^10.19.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "comfy.js": "^1.1.16",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.11.2",
     "next": "13.3.0",
+    "play-dl": "^1.9.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5"
   }
 }
