--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "clsx": "^1.2.1",
     "comfy.js": "^1.1.16",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "formik": "^2.2.9",
     "framer-motion": "^10.11.2",
     "next": "13.3.0",
     "play-dl": "^1.9.6",
@@ -27,10 +29,15 @@
     "react-dom": "18.2.0",
     "react-youtube": "^10.1.0",
     "typescript": "5.0.3",
-    "zod": "^3.21.4"
+    "yup": "^1.0.2",
+    "zod": "^3.21.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
