--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "postcss": "^8.4.21",
+    "react-icons": "^4.10.1",
     "tailwindcss": "^3.3.1"
   }
 }
